--- a/var/www/torrentwatch-xa/css/torrentwatch-xa.css
+++ b/var/www/torrentwatch-xa/css/torrentwatch-xa.css
@@ -853,7 +853,7 @@ div.tr_bar {
 
 div.feed_info p {
     padding: 0;
-    //font-size: 0.8em;
+    /* font-size: 0.8em; */
 }
 
 div.torrent_name {
@@ -1799,7 +1799,7 @@ ul#historyItems {
 
 div#history ul li{
     white-space: nowrap;
-    overflow: visible; // was hidden, but this cuts off long titles
+    overflow: visible; /* was hidden, but this cuts off long titles */
     font-size: 0.9em
 }
 
