--- a/var/www/html/torrentwatch-xa/css/phone.css
+++ b/var/www/html/torrentwatch-xa/css/phone.css
@@ -26,7 +26,7 @@ ul#filterbar_container li:hover {
     height: 18px;
     background: #CCC;
     /* background: #8d7d93; */
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#EEEEEE,endColorstr=#AAAAAA);
+    filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#EEEEEE,endColorstr=#AAAAAA)";
     background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#aaa));
     background: -moz-linear-gradient(top, #eee, #aaa);    border-top: 1px solid #f5f5f5;
     border-top: 1px solid #f5f5f5;
