--- a/var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
+++ b/var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
@@ -1357,7 +1357,7 @@ div#configTabs #tabInt {
     margin-left: 0;
 }
 
-div#configTabs #tabOthers {
+div#configTabs #tabNotify {
     margin-right: 0;
 }
 
