--- a/var/www/html/torrentwatch-xa/css/torrentwatch-xa-md.css
+++ b/var/www/html/torrentwatch-xa/css/torrentwatch-xa-md.css
@@ -1384,7 +1384,7 @@ div#configTabs #tabInt {
     margin-left: 0;
 }
 
-div#configTabs #tabOthers {
+div#configTabs #tabNotify {
     margin-right: 0;
 }
 
